--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,2 +1,25 @@
 :root {
+  /* colors */
+  --color-primary: #ffee58;
+  --color-primary-hover: color-mix(in srgb, var(--color-primary), #000 10%);
+  --color-primary-focus: color-mix(in srgb, var(--color-primary), #000 12%);
+  --color-disabled: #e9e9e9;
+  --color-text: #212121;
+  --color-text-disabled: color-mix(in srgb, var(--color-text), #fff 50%);
+
+  /* typography */
+  --font-size-main: 1.6rem;
+
+  /* transition */
+  --transition-base: 0.3s ease;
+
+  /* grid */
+  --size-xs: 20px;
+  --size-sm: 30px;
+  --size-md: 40px;
+  --size-lg: 50px;
+  --space-sm: 1rem;
+  --space-md: 1.5rem;
+  --space-xs: 0.5rem;
+  --space-lg: 2.5rem;
 }
