--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,6 +3,7 @@
   --color-primary: #ffee58;
   --color-primary-hover: color-mix(in srgb, var(--color-primary), #000 10%);
   --color-primary-focus: color-mix(in srgb, var(--color-primary), #000 12%);
+  --color-secondary: #81d4fa;
   --color-disabled: #e9e9e9;
   --color-text: #212121;
   --color-text-disabled: color-mix(in srgb, var(--color-text), #fff 50%);
