--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,9 +7,11 @@
   --color-disabled: #e9e9e9;
   --color-text: #212121;
   --color-text-disabled: color-mix(in srgb, var(--color-text), #fff 50%);
+  --color-gray: #d4d4d4;
 
   /* typography */
   --font-size-main: 1.6rem;
+  --font-family: 'Exo 2', sans-serif;
 
   /* transition */
   --transition-base: 0.3s ease;
@@ -23,4 +25,5 @@
   --space-md: 1.5rem;
   --space-xs: 0.5rem;
   --space-lg: 2.5rem;
+  --interface-size-sm: 3px;
 }
